# module-code-examples

./: .gitignore  Dockerfile  README.md  databricks.yml  dbconnect_example.py  main.py  project_config.yml  pyproject.toml  run_info.json
Module2/house_price/: house_price_exercise.ipynb  house_price_exercise.py  project_config.yml  pyproject.toml
Module2/house_price/notebooks/: exercise_version_2.py  test_notebook.py
Module2/house_price/src/: data_processor.py
data/: data.csv
notebooks/: housing_price-0.0.1-py3-none-any.whl  week1. ugly_notebook.py
notebooks/week1/: week1. pretty_notebook.py
notebooks/week2/: 01.prepare_dataset.py  02.mlflow_experiment.py  03.log_and_register_model.py  04.log_and_register_custom_model.py  05.log_and_register_fe_model.py  README.md
notebooks/week2/mlruns/0/: meta.yaml
src/house_price/: config.py  data_processor.py  price_model.py  utils.py
tests/: test_data_processor.py
week2/: 01.prepare_dataset.py  02.mlflow_experiment.py  03.log_model.py  04.log_custom_model.py  05.register_model.py  06.feature_table_feature_func.py  07.log_model_custom_pkg.py
week2/price_converter/: utils.py
