[project]
name = "house-price"
version = "0.0.1"
description = "Housing prices project"
requires-python = "==3.11"
dependencies = ["scikit-learn>=1.5.1, <2",
                "mlflow>=2.16.0, <3",
                "pandas>=2.2.2, <3",
                "pyarrow>=15.0.2, <16",
                "scipy>=1.14.1, <2",]

[project.optional-dependencies]
dev = ["databricks-connect>=15.4.1, <16",
       "databricks-sdk>=0.32.0, <0.33",
       "ipykernel>=6.29.5, <7",
       "pip>=24.2"]

[build-system]
requires = [
  "setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"